--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 site_theme               : "default"
 title                    : "Donald F. Ferguson/Ansys Fellow; Adjunct Professor"
-title_separator          : "-"
+title_separator          : "--"
 name                     : &name "Donald F. Ferguson"
 # description              : &description "personal description"
 # url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
