--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,17 +11,17 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/
     
-  - title: "Portfolio"
-    url: /portfolio/
+#  - title: "Portfolio"
+#    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#  - title: "Blog Posts"
+#    url: /year-archive/
     
   - title: "CV"
     url: /cv/
@@ -32,5 +32,5 @@ main:
   - title: "Guide"
     url: /markdown/
 
-  - title: "Cool Stuff"
-    url: /cool-stuff/
+#  - title: "Cool Stuff"
+#    url: /cool-stuff/
